Fixed Animation Mobile

--- a/src/pages/Introduction/Introduction.css
+++ b/src/pages/Introduction/Introduction.css
@@ -129,7 +129,7 @@
 
 @media only screen and (max-width: 600px) {
     .introduction-container {
-        height: 80vh;
+        height: 70vh;
         padding: 0rem 1rem;
         gap: 0rem;
     }
