--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -62,7 +62,7 @@
 }
 .skill-bg:hover{
     background-color: #ffffff10;
-    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.500);
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.500);
 }
 
 .skill-bg::after {
